# redshipblueship

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEV_CONTAINER_VERIFICATION.md  Dockerfile  README.md  copy-existing-otrs.cmake  resource_collisions.txt  symbol_collisions.txt
combo/: CMakeLists.txt
combo/include/combo/: ComboContext.h  ComboContextBridge.h  CrossGameEntrance.h  DynamicLibrary.h  Export.h  FrozenState.h  Game.h  GameAPI.h  GameArchives.h  GameExports.h  IGame.h  SharedGraphics.h
combo/include/combo/test/: TestRunner.h
combo/src/: ComboContext.cpp  ComboContextBridge.cpp  CrossGameEntrance.cpp  DynamicLibrary.cpp  FrozenState.cpp  GameArchives.cpp  SharedGraphics.cpp  main.cpp  placeholder.cpp  unified_main.cpp
combo/src/test/: TestRunner.cpp
combo/tests/: CMakeLists.txt  context_test.cpp  cross_game_entrance_test.cpp  dynamic_library_test.cpp  frozen_state_test.cpp  game_archives_test.cpp  sanity_test.cpp
games/mm/: CMakeLists.txt
games/mm/2s2h/: BenJsonConversions.hpp  BenPort.cpp  BenPort.h  CrashHandlerExt.cpp  GameExports.cpp  GameExports_SingleExe.cpp  ShipInit.hpp  ShipUtils.cpp  ShipUtils.h  framebuffer_effects.c  gu_pc.c  mixer.c  mm_resources.cpp  z_message_OTR.cpp  z_play_2SH.cpp  z_scene_2SH.cpp
games/mm/2s2h/BenGui/: BenGui.cpp  BenGui.hpp  BenInputEditorWindow.cpp  BenInputEditorWindow.h  BenMenu.cpp  BenMenu.h  BenMenuBar.cpp  BenMenuBar.h  BenModals.cpp  BenModals.h  CosmeticEditor.cpp  CosmeticEditor.h  HudEditor.cpp  HudEditor.h  InputViewer.cpp  InputViewer.h  Menu.cpp  Menu.h  MenuTypes.h  Notification.cpp  Notification.h  ResolutionEditor.cpp  ResolutionEditor.h  UIWidgets.cpp  UIWidgets.hpp
games/mm/2s2h/CustomItem/: CustomItem.cpp  CustomItem.h
games/mm/2s2h/CustomMessage/: CustomMessage.cpp  CustomMessage.h
games/mm/2s2h/DeveloperTools/: ActorViewer.cpp  ActorViewer.h  BetterMapSelect.c  CollisionViewer.cpp  CollisionViewer.h  DLViewer.cpp  DLViewer.h  DebugConsole.cpp  DeveloperTools.cpp  DeveloperTools.h  EventLog.cpp  EventLog.h  HookDebugger.cpp  HookDebugger.h  MessageViewer.cpp  MessageViewer.h  ObjectDependency.cpp  SaveEditor.cpp  SaveEditor.h  WarpPoint.cpp
games/mm/2s2h/Enhancements/: DemoBehavior.cpp  Enhancements.cpp  Enhancements.h
games/mm/2s2h/Extractor/: Extract.cpp
games/mm/2s2h/GameInteractor/: GameInteractor.cpp  GameInteractor.h  GameInteractor_HookTable.h  GameInteractor_VanillaBehavior.h
games/mm/2s2h/NameTag/: NameTag.cpp  NameTag.h
games/mm/2s2h/ObjectExtension/: ActorListIndex.cpp  ActorListIndex.h  ObjectExtension.h
games/mm/2s2h/PresetManager/: PresetManager.cpp  PresetManager.h
games/mm/2s2h/Rando/: ConvertItem.cpp  DrawFuncs.cpp  DrawFuncs.h  DrawItem.cpp  GiveItem.cpp  Menu.cpp  Rando.cpp  Rando.h  RemoveItem.cpp  StartingItems.cpp  Types.h
games/mm/2s2h/SaveManager/: BinarySaveConverter.cpp  SaveManager.cpp  SaveManager.h
games/mm/CMake/: DefaultCXX.cmake
games/mm/assets/: 2s2h_assets.h
games/mm/assets/extractor/: Config_GC_US.xml  Config_N64_US.xml
games/mm/assets/text/: message_data_static.c  staff_message_data_static.c
games/mm/include/: attributes.h  audiomgr.h  buffers.h  build.h  carthandle.h  color.h  controller.h  fault.h  fault_internal.h  fixed_point.h  functions.h  gamealloc.h  gfx.h  gfx_setupdl.h  gfxprint.h  ichain.h  idle.h  listalloc.h  loadfragment.h  macros.h  main.h  message_data_static.h  os_malloc.h  padmgr.h  rand.h  regs.h  segment_symbols.h  seqcmd.h  sequence.h  sfx.h  slowly.h  stackcheck.h  sys_cfb.h  sys_matrix.h  system_heap.h  system_malloc.h  tha.h  thga.h  variables.h  z64.h  (+56 more)
games/mm/include/PR/: R4300.h  gbi.h  gs2dex.h  gu.h  guint.h  os_ai.h  os_cont.h  os_convert.h  os_exception.h  os_host.h  os_internal.h  os_internal_reg.h  os_libc.h  os_message.h  os_motor.h  os_pfs.h  os_pi.h  os_system.h  os_thread.h  os_time.h  os_vi.h  osint.h  piint.h  rcp.h  rdp.h  sptask.h  ultratypes.h  viint.h  xstdio.h
games/mm/include/audio/: heap.h  load.h  soundfont.h
games/mm/include/libc/: math.h  stdbool.h  stdlib.h
games/mm/include/tables/: effect_ss_table.h  gamestate_table.h  object_table.h  scene_table.h
games/mm/linux/: 2s2h.desktop
games/mm/macosx/: Info.plist.in
games/mm/src/audio/: code_8019AF00.c  sequence.c  session_config.c  sfx.c  sfx_params.c  voice_external.c  voice_internal.c
games/mm/src/boot/: CIC6105.c  boot_main.c  build.c  build.c.in  carthandle.c  fault.c  fault_drawer.c  idle.c  irqmgr.c  syncprintf.c  viconfig.c  yaz0.c  z_std_dma.c
games/mm/src/buffers/: audio_heap.c  gfxbuffers.c  heaps.c  system_heap.c
games/mm/src/code/: PreRender.c  TwoHeadArena.c  TwoHeadGfxArena.c  audio_thread_manager.c  c_keyframe.c  code_800E8EA0.c  code_8010C1B0.c  cutscene_camera.c  flg_set.c  game.c  gamealloc.c  graph.c  graphalloc.c  jpegdecoder.c  jpegutils.c  listalloc.c  main.c  object_table.c  padmgr.c  sched.c  speed_meter.c  stubs.c  su_mtx.c  sys_cfb.c  sys_cmpdma.c  sys_flashrom.c  sys_freeze.c  sys_initial_check.c  sys_math.c  sys_math3d.c  sys_math_atan.c  sys_matrix.c  sys_rumble.c  sys_slowly.c  sys_ucode.c  title_setup.c  z_DLF.c  z_actor.c  z_actor_dlftbls.c  z_bg_collect.c  (+90 more)
games/mm/windows/: properties.h
pc/: CMakeLists.txt
pc/common/: main.cpp
pc/mm/: GameAdapter.cpp
pc/oot/: GameAdapter.cpp
rsbs/: CMakeLists.txt
rsbs/include/rsbs/: combo_context.h  libultra_os.h  rsbs.h
rsbs/src/: combo_context.c  main.cpp  placeholder.c
rsbs/src/libultra/gu/: position.c  rotate.c  sqrtf.c
rsbs/src/libultra/os/: afterprenmi.c  createmesgqueue.c  dequeuethread.c  destroythread.c  getactivequeue.c  getthreadid.c  getthreadpri.c  jammesg.c  recvmesg.c  sendmesg.c  (+1 more)
src/common/: CMakeLists.txt  ComboMenuBar.cpp  ComboMenuBar.h  archives.cpp  archives.h  context.cpp  context.h  entrance.cpp  entrance.h  game.c  game.h  game_lifecycle.c  game_lifecycle.cpp  game_lifecycle.h  game_stubs.cpp  integration_test_hooks.cpp  integration_test_hooks.h  mm_stubs.c  mm_stubs.cpp  shared_graphics_win.cpp  switch.cpp  test_runner.cpp  test_runner.h  unified_save.c
src/common/tests/: test_game_lifecycle.c
(+2809 files in other folders)
